tests/baselines/reference/derivedClassSuperStatementPosition.errors.txt
derivedClassSuperStatementPosition.ts(12,9): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
derivedClassSuperStatementPosition.ts(22,9): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
derivedClassSuperStatementPosition.ts(45,9): error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
derivedClassSuperStatementPosition.ts(60,15): error TS2401: A 'super' call must be a root-level statement within a constructor of a derived class that contains initialized properties, parameter properties, or private identifiers.
derivedClassSuperStatementPosition.ts(69,13): error TS2401: A 'super' call must be a root-level statement within a constructor of a derived class that contains initialized properties, parameter properties, or private identifiers.
derivedClassSuperStatementPosition.ts(81,13): error TS2401: A 'super' call must be a root-level statement within a constructor of a derived class that contains initialized properties, parameter properties, or private identifiers.
derivedClassSuperStatementPosition.ts(90,13): error TS2401: A 'super' call must be a root-level statement within a constructor of a derived class that contains initialized properties, parameter properties, or private identifiers.


==== derivedClassSuperStatementPosition.ts (7 errors) ====
    class DerivedBasic extends Object {
        prop = 1;
        constructor() {
            super();
        }
    }
    
    class DerivedAfterParameterDefault extends Object {
        x1: boolean;
        x2: boolean;
        constructor(x = false) {
            this.x1 = x;
            ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
            super(x);
            this.x2 = x;
        }
    }
    
    class DerivedAfterRestParameter extends Object {
        x1: boolean[];
        x2: boolean[];
        constructor(...x: boolean[]) {
            this.x1 = x;
            ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
            super(x);
            this.x2 = x;
        }
    }
    
    class DerivedComments extends Object {
        x: any;
        constructor() {
            // c1
            console.log(); // c2
            // c3
            super(); // c4
            // c5
            this.x = null; // c6
            // c7
        }
    }
    
    class DerivedCommentsInvalidThis extends Object {
        x: any;
        constructor() {
            // c0
            this;
            ~~~~
!!! error TS17009: 'super' must be called before accessing 'this' in the constructor of a derived class.
            // c1
            console.log(); // c2
            // c3
            super(); // c4
            // c5
            this.x = null; // c6
            // c7
        }
    }
    
    class DerivedInConditional extends Object {
        prop = 1;
        constructor() {
            Math.random()
                ? super(1)
                  ~~~~~~~~
!!! error TS2401: A 'super' call must be a root-level statement within a constructor of a derived class that contains initialized properties, parameter properties, or private identifiers.
                : super(0);
        }
    }
    
    class DerivedInIf extends Object {
        prop = 1;
        constructor() {
            if (Math.random()) {
                super(1);
                ~~~~~~~~
!!! error TS2401: A 'super' call must be a root-level statement within a constructor of a derived class that contains initialized properties, parameter properties, or private identifiers.
            }
            else {
                super(0);
            }
        }
    }
    
    class DerivedInBlockWithProperties extends Object {
        prop = 1;
        constructor(private paramProp = 2) {
            {
                super();
                ~~~~~~~
!!! error TS2401: A 'super' call must be a root-level statement within a constructor of a derived class that contains initialized properties, parameter properties, or private identifiers.
            }
        }
    }
    
    class DerivedInConditionalWithProperties extends Object {
        prop = 1;
        constructor(private paramProp = 2) {
            if (Math.random()) {
                super(1);
                ~~~~~~~~
!!! error TS2401: A 'super' call must be a root-level statement within a constructor of a derived class that contains initialized properties, parameter properties, or private identifiers.
            } else {
                super(0);
            }
        }
    }
    